# Cpp

./: .gitignore  .gitmodules  AutoPrMerge.bat  Backup.txt  Cpp.CrossPlatform.sln  Cpp.MSBuild.sln  Cpp.Qt.sln  Cpp.sln  Directory.Build.props  Directory.Build.targets  Doxyfile  ForceProjectReload.bat  ForceProjectReload.ps1  InitializeSolution.bat  README.md  UpdateSubmodules.bat
.github/workflows/: Github-actions-auto-merge-message.yml
CV/Tests/: Tests.vcxproj  Tests.vcxproj.filters  main.cpp  main_1_Ctor_func_declaration_without_definition.cpp  main_2_Cropping_objects.cpp  main_2_Cropping_objects2.cpp  main_3_Temporary_object.cpp  main_4_Call_class_method_on_empty_instance.cpp  main_5_Labmda_capturing.cpp  main_6_invalidation_iterators.cpp  main_7_RAII_Rvalue.cpp  main_8_Raw_ptrs_in_vector.cpp
ComAPI/: ComAPI.h  ComAPI.vcxproj
Console/: Console.vcxproj  Console.vcxproj.filters  Console_IncludeToCompile.targets  main.cpp  main_10_breakpoint_in_macros.cpp  main_11_enum_to_string.cpp  main_11_enum_to_string.h  main_12_0_is_empty_variant.cpp  main_12_1_get_variant_item.cpp  main_12_is_empty_variant.cpp  main_13_map_class_members.cpp  main_14_extract_template_params.cpp  main_15_0_check_if_raw_ptr_is_invalid.cpp  main_15_1_check_if_context_was_deleted.cpp  main_15_check_if_raw_ptr_is_invalid.cpp  main_16_GUID_to_string_conversion.cpp  main_17_singleton_destructor.cpp  main_18_detect_windows_11.cpp  main_19_scoped_lock.cpp  main_1_constexpr_string.cpp  main_20_GetPackageInfo.cpp  main_21_reinterpret_cast_to_array_of_structs.cpp  main_22_async_thread_catch_exception.cpp  main_23_regex_search.cpp  main_24_future.cpp  main_25_try_lock.cpp  main_26_weak_ptr.cpp  main_27_function_traints.cpp  main_27_function_traits.cpp  main_28_ConcurrentQueue.cpp  main_28_unique_lock.cpp  main_29_Token.cpp  main_2_constexpr_static_assert.cpp  main_30_wait_Dtor_callback_finish.cpp  main_31_FunctionMt.cpp  main_32_future_exception_move_Ctor.cpp  main_33_span.cpp  main_34_BIOS_uniq_id.cpp  main_35_enum_raflection.cpp  main_36_ThreadFinishHelper.cpp  (+36 more)
Console/Create process console/: main_2.cpp
Console/QUIC context token/: MsQuic.h
Console/Static initialization fiasco/: SettingsKeeper.cpp  SettingsKeeper.h  StaticConstructor.h  WAppConstants.cpp  WAppConstants.h  fileB.h
Console/Test Helpers/: test_1_Timer_token.cpp
Console/[01] Create process console/: main_2.cpp
Console/[02] Static initialization fiasco/: SettingsKeeper.h  WAppConstants.cpp  WAppConstants.h
Console/[04] QUIC context token/: main_QUICClient.cpp
Console/[05] Dtor callback finish/: FunctionMt.h  ServerCallbacks.h
Console/[06] Future wrapper/: FutureWrapper.h  main_FutureWrapper.cpp
Console/[07] Print Variants/: main_37_Printer.cpp  main_37_Printer.h
Console/[08] Token singleton/: main_42_fileB.cpp  main_42_fileC.h  main_42_main.cpp
Console/[09] DVD API/: DiscRecorder.h  main_47_WMI.cpp
Console/[10] Socket NAT/: Client.h  Common.h  main.cpp
Console/[11] C++20 Coroutine/: AsyncTasksCo.h  Awaitables.h  main_55_Coroutine.cpp  main_AsyncTasks_Coroutine.cpp
Console/[12] Doxygen/: Classes.cpp  Classes.h  main_Doxygen.cpp
Console/[13] Nuget CppRestSdk/: Common.h  HttpModel.h  RequestManager.cpp  RequestManager.h  Tests.cpp  Tests.h  (+1 more)
CrashHandling/: CrashHandling.vcxproj  CrashHandling.vcxproj.filters  algo.h  callstack.cpp  callstack.h  definition.h  error.h  iterator.h  main.cpp  main_1.cpp  main_2.cpp  main_4_miniDump.cpp  main_6_VEH.cpp  stack.h  system.h  traits.h  typedef.h
CrashHandlingAPI_DLL/: CrashHandlingAPI.cpp  CrashHandlingAPI.h  CrashHandlingAPI_DLL.vcxproj
CrossPlatform/Container_STUNServer/: CMakeLists.txt  Dockerfile
CrossPlatform/Container_STUNServer/STUNServer/: ActiveUser.h  CMakeLists.txt  JwtReader.cpp  JwtReader.h  Logger.cpp  Logger.h  MsQuicInitializer.cpp  MsQuicInitializer.h  Platform.h  ProtobufSerializer.cpp  ProtobufSerializer.h  QuicSocketServer.cpp  QuicSocketServer.h  QuicUserStream.h  STUNServer.cpp  STUNServer.vcxproj  STUNServer.vcxproj.filters  System.h  TcpSocketServer.cpp  TcpSocketServer.h  TestHello.cpp  UdpSocketServer.cpp  UdpSocketServer.h  UserAddress.h  UserAuthMessage.h  UserConnection.h  UserDataExchanger.cpp  UserDataExchanger.h  host.cert  host.key
CrossPlatform/Container_STUNServer/STUNServer/ProtoFiles/: AudioDataMessage.proto  ClientSTUNServerAuthMessage.proto  ControlSocketConfiguration.proto  EmptyMessage.proto  FrameConfigurationMessage.proto  KeyEventMessage.proto  LostFramesMessage.proto  MediaDataMessage.proto  MessageTypeEnum.proto  MessageWrapper.proto  MouseEventMessage.proto  STUNServerMessage.proto  UserInput.proto  VideoDataMessage.proto
CrossPlatform/Container_StunServerMini/: CMakeLists.txt  Dockerfile
CrossPlatform/Container_StunServerMini/StunServerMini/: StunServer.h  StunServerMini.vcxproj  StunServerMini.vcxproj.filters  StunServerModels.h  main.cpp  packages.config
CrossPlatform/Linux/: CMakeLists.txt
CrossPlatform/Linux/Linux_Test.App/: CMakeLists.txt  Linux_Test.App.vcxproj  Linux_Test.App.vcxproj.filters  main.cpp
CrossPlatform/Linux/Linux_Test.Dynamic/: CMakeLists.txt  ClassFromDynamicLib.cpp  ClassFromDynamicLib.h  ImportExport.h  Linux_Test.Dynamic.vcxproj  Linux_Test.Dynamic.vcxproj.filters
CrossPlatform/Linux/Linux_Test.Static/: CMakeLists.txt  ClassFromStaticLib.cpp  ClassFromStaticLib.h  Linux_Test.Static.vcxproj  Linux_Test.Static.vcxproj.filters
CrossPlatform/StunServerMini/: CMakeLists.txt
CrossPlatform/StunServerMini/StunServerMini/: CMakeLists.txt  Platform.h  PlatformLogger.h  SocketBaseUdp.h  StunServer.h  StunServerMini.vcxproj  StunServerMini.vcxproj.filters  StunServerModels.cpp  StunServerModels.h  main.cpp
Helpers/: Helpers.cpp  Helpers.vcxproj  Helpers.vcxproj.filters
MSBuild/: InlineTasks.targets  MSBuild_Shared.targets
PackageConsole/: Package.appxmanifest  PackageConsole.wapproj
TestUWP/: Package.appxmanifest  TestUWP.csproj
Tools/: BuildSolution_outside.ps1  MakeCert.txt
WinRT_DLL/: Class1.cpp  WinRT_DLL.vcxproj
WinUI3/: Directory.Build.props  Directory.Build.targets
(+975 files in other folders)
